syntax = "proto3";

package examples.v1;

option go_package = "github.com/wundergraph/cosmo/router/pkg/connectrpc/testdata/examples";

// UserService demonstrates the naming convention for ConnectRPC methods.
// Methods should be prefixed with Query, Mutation, or Subscription to indicate
// the GraphQL operation type they map to.
//
// IMPORTANT: Each RPC method must have its own dedicated Request and Response messages.
service UserService {
  // Query methods - These map to GraphQL queries (read operations)
  // Naming convention: QueryXxx where Xxx describes the operation
  
  // QueryGetUser retrieves a single user by ID
  rpc QueryGetUser(QueryGetUserRequest) returns (QueryGetUserResponse) {}
  
  // QueryListUsers retrieves a list of users with optional filtering
  rpc QueryListUsers(QueryListUsersRequest) returns (QueryListUsersResponse) {}
  
  // QuerySearchUsers searches for users by name or email
  rpc QuerySearchUsers(QuerySearchUsersRequest) returns (QuerySearchUsersResponse) {}
  
  // Mutation methods - These map to GraphQL mutations (write operations)
  // Naming convention: MutationXxx where Xxx describes the operation
  
  // MutationCreateUser creates a new user
  rpc MutationCreateUser(MutationCreateUserRequest) returns (MutationCreateUserResponse) {}
  
  // MutationUpdateUser updates an existing user
  rpc MutationUpdateUser(MutationUpdateUserRequest) returns (MutationUpdateUserResponse) {}
  
  // MutationDeleteUser deletes a user by ID
  rpc MutationDeleteUser(MutationDeleteUserRequest) returns (MutationDeleteUserResponse) {}
  
  // MutationBatchCreateUsers creates multiple users in a single operation
  rpc MutationBatchCreateUsers(MutationBatchCreateUsersRequest) returns (MutationBatchCreateUsersResponse) {}
}

// Query Request/Response Messages

message QueryGetUserRequest {
  int32 id = 1;
}

message QueryGetUserResponse {
  User user = 1;
}

message QueryListUsersRequest {
  int32 page = 1;
  int32 page_size = 2;
  string filter = 3;
}

message QueryListUsersResponse {
  repeated User users = 1;
  int32 total_count = 2;
  int32 page = 3;
  int32 page_size = 4;
}

message QuerySearchUsersRequest {
  string query = 1;
  int32 limit = 2;
}

message QuerySearchUsersResponse {
  repeated User users = 1;
  int32 total_count = 2;
}

// Mutation Request/Response Messages

message MutationCreateUserRequest {
  string name = 1;
  string email = 2;
  string role = 3;
}

message MutationCreateUserResponse {
  User user = 1;
}

message MutationUpdateUserRequest {
  int32 id = 1;
  string name = 2;
  string email = 3;
  string role = 4;
}

message MutationUpdateUserResponse {
  User user = 1;
}

message MutationDeleteUserRequest {
  int32 id = 1;
}

message MutationDeleteUserResponse {
  bool success = 1;
  string message = 2;
}

message MutationBatchCreateUsersRequest {
  repeated UserInput users = 1;
}

message MutationBatchCreateUsersResponse {
  repeated User users = 1;
  int32 created_count = 2;
}

// Domain Models

message User {
  int32 id = 1;
  string name = 2;
  string email = 3;
  string role = 4;
  string created_at = 5;
  string updated_at = 6;
}

message UserInput {
  string name = 1;
  string email = 2;
  string role = 3;
}